--- a/src/App.css
+++ b/src/App.css
@@ -194,9 +194,9 @@
   right: 30px;
   top: 30px;
   z-index: 10;
-  background: rgba(0,0,0,0.5);
+  background: rgb(255, 255, 255);
   border: 1px solid rgba(255,255,255,0.08);
-  color: white;
+  color: #646cff;
   padding: 10px;
   border-radius: 6px;
   cursor: pointer;
